terraform/config/ecs-best-practices/validate-ecs-task-definition-pid-mode-check/test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: good-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../validate-ecs-task-definition-pid-mode-check.yaml --payload good-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: validate-ecs-task-definition-pid-mode-check
                rules:
                - rule:
                    name: validate-ecs-task-definition-pid-mode-check
                  error: ~
                  violations: ~
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: bad-test
spec:
  steps:
    - name: kyverno-json
      try:
      - script:
          content: |
            set -e
            kyverno-json scan --policy ../validate-ecs-task-definition-pid-mode-check.yaml --payload bad-payload.json --output json --bindings ./binding.yaml
          check:
            ($error): ~
            (json_parse($stdout)):
            - results:
              - policy:
                  apiVersion: json.kyverno.io/v1alpha1
                  kind: ValidatingPolicy
                  metadata:
                    name: validate-ecs-task-definition-pid-mode-check
                rules:
                - rule:
                    name: validate-ecs-task-definition-pid-mode-check
                  error: ~
                  violations:
                  - message: ECS task definitions shares the host's process namespace (CHECK=spec.rules[0].assert.all[0])
                    errors:
                    - type: FieldValueInvalid
                      (value != 'task'): true
                      detail: 'Expected value: "task"'
